# UTMB-IIS

./: .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt  run.py  web.config  wfastcgi.py
.github/workflows/: ci.yaml  code-quality.yml
crud/: __init__.py  link_crud.py  options_crud.py  statistics_crude.py
database/: __init__.py  db.py
models/: __init__.py  models.py
routes/: __init__.py  link_routes.py  main_routes.py  options_routes.py  other_routes.py  statistics_routes.py
services/: __init__.py  ga_service.py  link_service.py  options_service.py  other_services.py  statistics_services.py
src/: README.md  __init__.py  pyproject.toml
src/controllers/: campaign_controller.py  options_controller.py  statistic_controller.py  utm_link_controller.py
src/database/: db.py  models.py
src/factories/: utm_link_factory.py
src/forms/: filtered_statistic_schemas.py  link_creation_form.py  option_schemas.py
src/repositories/: campaign_repository.py  option_repository.py  statistics_repository.py  utm_link_repository.py
src/services/: campaign_service.py  option_service.py  statistic_service.py  utm_link_service.py
src/static/css/: base.css  campaign_name_creation.css  campaign_result.css  filter_set.css  utm_creation.css
src/static/js/: campaign_overview.js  script.js  upload.js
src/templates/: base.html  campaign_creation.html  campaign_name_list.html  campaigns.html  exclude_options.html  filter_setting.html  index.html
src/utils/exceptions/: short_link_exception.py
src/utils/extarnal_api/: google_analytics.py  short_io.py
src/utils/google_analytics_requests/: graph_request.py  table_request.py
src/utils/logger/: exception_logger.py  logger_setup.py  request_logger.py
static/css/: base.css  campaign_name_overview.css  campaign_result.css  filter_result.css  options_management.css  upload.css  yt_bloggers.css
static/js/: date-defaults.js  graph.js  script.js  sidebar.js
templates/: base.html  campaign_name_list.html  campaign_query.html  campaigns.html  data-stamp.html  exclude_options.html  filter_setting.html  filtered_utm.html  index.html  manage_exclusions.html  new_observ.html
utils/: __init__.py  data_import.py  db_utils.py  ga4_requests.py  short_link.py  uniq_values.py  yt_search.py
